# poseidon-mvp

./: .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  CONTRIBUTING.md  INFRASTRUCTURE_DESIGN.md  OPEN_SOURCE_STACK.md  README.md  SYSTEM_DESIGN.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  release.yml
charts/: README.md
charts/poseidon-platform/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values-multitenant.yaml  values-onprem.yaml  values.yaml
charts/poseidon-platform/charts/dashboard/: Chart.yaml
charts/poseidon-platform/charts/evaluation/: Chart.yaml
charts/poseidon-platform/charts/gateway/: Chart.yaml
charts/poseidon-platform/charts/observability/: Chart.yaml
charts/poseidon-platform/charts/rendering/: Chart.yaml
charts/poseidon-platform/charts/scenario-engine/: Chart.yaml
charts/poseidon-platform/charts/simulation-core/: Chart.yaml  values.yaml
charts/poseidon-platform/templates/: NOTES.txt
deploy/: README.md
deploy/compose/: .env.example  README.md  docker-compose.gpu.yml  docker-compose.yml  sim-entrypoint.sh
deploy/docker/: README.md  base-dev.Dockerfile  base-edge-rhel.Dockerfile  base-edge.Dockerfile  poseidon-sim.Dockerfile  ros_entrypoint.sh  sim-auv-dave.Dockerfile  sim-ssv-vrx.Dockerfile  unav-sim.Dockerfile
docs/: README.md  integration-log.md
docs/architecture/: 0001-unreal-ros2-bridge.md  0002-unav-sim-bridge.md
docs/runbooks/: backbone-verification.md  cloud-demo-box.md  cloud-demo-box.provision.sh  dev-setup.md  integration-auv-dave.md  integration-ssv-vrx.md  tier-2-evaluation.md  ue5-archetype-setup.md  ue5-camera-presets.md  ue5-mcap-replay.md
models/: README.md
poseidon-sim/: README.md
poseidon-sim/ai/: README.md
poseidon-sim/autonomy_auv/: README.md
poseidon-sim/autonomy_ssv/: README.md
poseidon-sim/auv_sim/: README.md
poseidon-sim/auv_sim/launch/: auv_dave.launch.py
poseidon-sim/auv_sim/mock/: README.md  package.xml  setup.cfg  setup.py
poseidon-sim/auv_sim/mock/poseidon_sim_mock/: __init__.py  mock_world.py
poseidon-sim/auv_sim/src/: auv_clock_health_shim.py  mock_auv_runtime.py
poseidon-sim/coupling/: README.md
poseidon-sim/coupling/src/: federation_bridge.py
poseidon-sim/env_service/: README.md
poseidon-sim/env_service/src/: mock_env_service.py
poseidon-sim/evaluation/: README.md  __init__.py
poseidon-sim/evaluation/dashboards/web/: README.md  app.py
poseidon-sim/evaluation/metrics/: README.md  __init__.py  extract.py  mcap_reader.py  registry.py  report.py  schema.py
poseidon-sim/evaluation/metrics/kpis/: __init__.py  drop_commit.py  federation_drift.py  mission_duration.py  track_length.py
poseidon-sim/nav/: README.md
poseidon-sim/rendering/: README.md
poseidon-sim/rendering/bridge/: Dockerfile  README.md  bridge.launch.py  replay.sh  rosbridge_server_allowlist.yaml
poseidon-sim/rendering/unreal/PoseidonUE/: .gitignore  PoseidonUE.uproject  README.md
poseidon-sim/rendering/unreal/PoseidonUE/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
poseidon-sim/rendering/unreal/PoseidonUE/Content/Archetypes/: README.md
poseidon-sim/rendering/unreal/PoseidonUE/Source/: PoseidonUE.Target.cs  PoseidonUEEditor.Target.cs
poseidon-sim/rendering/unreal/PoseidonUE/Source/PoseidonUE/: PoseidonUE.Build.cs  PoseidonUE.cpp
poseidon-sim/rendering/unreal/PoseidonUE/Source/PoseidonUE/Actors/: VehicleActor.cpp  VehicleActor.h
poseidon-sim/rendering/unreal/PoseidonUE/Source/PoseidonUE/Bridge/: PoseidonBridge.cpp  PoseidonBridge.h
poseidon-sim/rendering/unreal/PoseidonUE/Source/PoseidonUE/Cameras/: PoseidonCameraDirector.cpp  PoseidonCameraDirector.h
poseidon-sim/scenario_engine/: README.md
poseidon-sim/scenario_engine/src/: run_scenario_mvp.py
poseidon-sim/sensor_models/: README.md
poseidon-sim/ssv_sim/: README.md  package.xml  setup.cfg  setup.py
poseidon-sim/ssv_sim/launch/: ssv_vrx.launch.py
poseidon-sim/ssv_sim/poseidon_ssv_sim/: ssv_contract_shim.py  ssv_state_adapter.py
poseidon-sim/ssv_sim/src/: mock_ssv_runtime.py
poseidon-sim/tools/: README.md
poseidon-sim/world_generator/: README.md
scenarios/: README.md
tests/: README.md
tests/integration/: test_metrics_fixture.py  test_runtime_contract.py
tests/unit/: test_federated_mvp_contract.py  test_metrics_registry.py
tools/: README.md  check_layer_permissions.py  setup-linux.sh  setup-mac.sh  verify-backbone-t1.sh
vehicles/: README.md
