[project]
name = "poseidon-sim"
version = "0.0.0"
description = "POSEIDON MVP - maritime test and evaluation environment for AUV and SSV performance under controllable ocean and navigation conditions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }
authors = [
    { name = "POSEIDON MVP contributors" },
]
dependencies = []

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# No package selected yet; scaffold-only. First real Python package added
# here when the scenario engine lands.
packages = []

[tool.uv]
# uv-specific settings. Keep dependency-groups empty until the first dep
# is adopted per OPEN_SOURCE_STACK.md Section 2.

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "build",
    "dist",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
