<?xml version="1.0"?>
<package format="3">
  <name>poseidon_ssv_sim</name>
  <version>0.0.0</version>
  <description>
    SSV runtime package for VRX-backed Gazebo Harmonic integration.
    Publishes /ssv/state, /ssv/sensors/*, /sim/ssv/clock, and /sim/ssv/health.
  </description>

  <maintainer email="contributors@poseidon-mvp.local">POSEIDON MVP contributors</maintainer>
  <license>TBD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
